# ifcfast

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  audit.toml  package-lock.json  pyproject.toml
-o/: view.sql
.cargo/: config.toml
.github/workflows/: ci.yml  csg-smoke.yml  release.yml
crates/core/: Cargo.toml
crates/core/examples/: reroute_demo.rs
crates/core/src/: entity_table.rs  ids_session.rs  indexer.rs  lexer.rs  lib.rs  object_guid.rs  scan.rs  source.rs
crates/core/src/bundle/: mod.rs  parquet_sink.rs  record.rs
crates/core/src/clash/: engine.rs  mod.rs  sink.rs  source.rs
crates/core/src/doc/: emit.rs  hotswap.rs  mod.rs  refs.rs  rel_rules.rs  subset.rs
crates/core/src/extractors/: classifications.rs  materials.rs  mod.rs  psets.rs  quantities.rs
crates/core/src/geom/: broad_phase.rs  csg.rs  mesh.rs  mod.rs  narrow_phase.rs
crates/core/src/ids/: attribute_read.rs  attribute_schema.rs  classification.rs  compiled.rs  context.rs  engine.rs  entity_schema.rs  extract_needs.rs  facets.rs  ifc_validation_base.rs  material.rs  mod.rs  native_expand.rs  predefined_type.rs  report.rs  restrictions.rs  tests.rs  tier1_validate.rs  validation_plan.rs  xml.rs
crates/core/src/ids/data/: ifc2x3_attrs.json  ifc4_attrs.json
crates/core/src/mesh/: axis.rs  boolean.rs  brep.rs  csg_primitive.rs  curveset.rs  cut_openings.rs  cut_stats.rs  cut_validate.rs  extrusion.rs  faceset.rs  gltf.rs  halfspace_clip.rs  indexed_curve.rs  mapped.rs  mod.rs  obj.rs  placement.rs  polygon_bool.rs  prism_csg.rs  profile.rs  qto.rs  revolved.rs  sample.rs  stats.rs  styles.rs  voxel.rs
crates/core/src/occupancy/: mod.rs
crates/core/src/routing/: mod.rs
crates/core/tests/: bundle_integration.rs  clash_integration.rs  cut_openings_integration.rs  cut_openings_proptest.rs  doc_hotswap.rs  doc_rel_rules.rs  doc_roundtrip.rs  doc_subset.rs  ids_parity.rs  mesh_item_local.rs  mesh_reveal.rs  predefined_type_door_window.rs
docs/: 2026-06-05_manifold-replacement-audit.json  IDS_COMPLIANCE_ROADMAP.md  IDS_SUPPORT_MATRIX.md  IDS_VALIDATION.md  PR_DRAFT_IDS_ENGINE.md  UPSTREAM_PR.md
docs/history/: origin.md
docs/plans/: 2026-06-05_cut-openings-manifold-replacement.md  2026-06-20_layered-correctness-roadmap-0.5.md
docs/worklog/: 2026-04-20-03-11_QTO-engine-migration-from-ifc-toolkit.md  2026-05-10-14-30_Fast-parser-v2-ownership.md  2026-05-11-08-50_Bbox-investigation-and-handover.md  2026-05-11-16-30_Fastparse-v3-native-Rust-tier1-bbox-v7-federated-floors-validation-arc.md  2026-05-13-08-13_Standalone-repo-extraction-from-ifc-workbench.md  2026-05-13-11-45_Workspace-relocation-and-dev-CLAUDE-md-update.md  2026-05-15-13-17_Graph-layer-and-tier1-perf-30pct.md  2026-05-15-15-00_Tier1-indexer-dispatch-perf.md  2026-05-15-18-00_ifcfast-com-cross-filter-canvas-mesh-coverage.md  2026-05-15-19-22_QTO-tabs-mesh-viewer-ready.md  2026-05-15-19-46_Layer-sets-spatial-drill-D3-vector-graph-opening-skip.md  2026-05-17-21-40_ifcfast-com-workbench-layout-A-live-trust-principle.md  2026-05-18-07-50_Close-three-capability-gaps-IfcSpace-Voids-DefinesByType.md  2026-05-18-11-30_Reveal-all-mesh-dispatch-boolean-csg-halfspace.md  2026-05-18-21-34_Close-mesh-issues-expose-segments-rip-ifcopenshell.md  2026-05-19-09-08_Indexer-18-doorstyle-windowstyle-and-WIP-flush.md  2026-05-19-10-32_17-evidence-survey-and-side-findings.md  2026-05-19-16-45_close-17-handlers-and-prune-stray-vercel-project.md  2026-05-20-10-00_streaming-geoparquet-substrate-vertical-slice.md  2026-05-20-15-00_hierarchical-instanced-substrate.md  2026-05-20-15-46_bundle-string-interning-and-zero-clone-regrouping.md  2026-05-21-12-40_QTO-engine-shipped-to-PyPI.md  2026-05-22-10-17_testing-agent-sweep-overflow-bucket-and-casing-fixes.md  2026-05-26-09-30_v0-4-1-substrate-reveal-all-and-ifczip.md  2026-05-26-12-24_v0-4-1-pypi-publish-closure.md  2026-05-27-00-04_substrate-completeness-v0-4-4-through-v0-4-7.md  2026-05-29-13-28_Auto-Checkpoint.md  2026-05-30-10-17_precision-stages-2-3-and-ifczip-handling.md  2026-05-30-14-34_fingerprint-columns-phase-1a.md  2026-05-30-22-36_geometry-kernel-foundation.md  2026-05-30-23-30_clash-and-csg-kernel.md  2026-05-31-00-02_cut-openings-on-meshes.md  2026-05-31-11-34_gh-issues-authority-and-multi-agent-signing.md  2026-05-31-14-13_gh21-cross-product-opening-cuts.md  2026-05-31-14-40_gh21-commit-and-gh22-csg-smoke.md  2026-05-31-23-12_csg-smoke-fix-and-rayon-parallelization.md  2026-06-01-01-15_gh23-iter-point-cloud-and-ifcfasterror.md  2026-06-03-20-19_clash-category-column-plus-halfspace-architecture.md  2026-06-03-20-49_gh39-agreement-flag-convention-flip.md  2026-06-04-15-27_v0.4.32-verified-gh3-shipped-gh52-phase1.md  (+29 more)
examples/: hybrid_qto_routing.py
examples/graph-viewer/: README.md  build.py  template.html
examples/projects/: lbk-building-c.yaml
python/ifcfast/: __init__.py  bundle.py  cache.py  clash.py  classify.py  cli.py  federated_floors.py  header.py  mcp_server.py  model.py  reroute.py
scripts/: export_ids_goldens.py  g55_floor_bands.py  gen_attribute_schema.py  gen_entity_schema.py  gen_schema_supertypes.py  generate_sample_sidecars.py  gh65_diag.py  gh65_sweep.py  run_buildingsmart_ids_conformance.py  verify_ids_release.py
scripts/fixtures/: bench_large_models.ids
tests/: test_agent_surface.py  test_by_type_subtypes.py  test_cache_integrity.py  test_classify_ifc4x3.py  test_contract_hardening.py  test_federated_floors.py  test_graph.py  test_header_encoding_and_drift_gate.py  test_hotswap.py  test_mcp_server.py  test_mesh_local_frame.py  test_minor_batch_71.py  test_quantities.py  test_smoke.py  test_strict_mode.py  test_subset.py  test_types_and_diff.py
tests/fixtures/: aggregate_part.ifc  broken_conversion_unit.ifc  geom_box.ifc  hotswap_body.ifc  hotswap_body_2x3.ifc  hotswap_roundtrip.ifc  hotswap_subcontext.ifc  latin1_encoded.ifc  materials.ifc  no_lengthunit.ifc  quantities.ifc  rel_field_pinning.ifc  site_annotation.ifc  subset_owner_history.ifc  subset_prune.ifc
tests/ids/: conftest.py  parity.py  test_h29_regression.py  (+9 more)
(+39 files in other folders)
