[package]
name = "ifcfast-core"
version = "0.4.19"
edition = "2021"
license = "MIT"
description = "Fast native IFC parser and data extractors"
repository = "https://github.com/EdvardGK/ifcfast"

[lib]
# Python sees this module at `ifcfast._core` thanks to maturin's
# `module-name` setting in pyproject.toml. The user-facing API in
# python/ifcfast/__init__.py wraps this.
name = "_core"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ifcfast-bench"
path = "src/bin/bench.rs"
required-features = []

[[bin]]
name = "ifcfast-mesh"
path = "src/bin/mesh.rs"
required-features = ["mesh"]

[[bin]]
name = "ifcfast-bundle"
path = "src/bin/bundle.rs"
required-features = ["bundle"]

[features]
default = ["python"]
python = ["dep:pyo3"]
mesh = ["dep:earcutr", "dep:glam"]
# Streaming substrate writer (GeoParquet-of-products). Heavy deps
# (arrow, parquet) intentionally gated off the default Python build.
bundle = ["mesh", "dep:arrow", "dep:parquet"]
# Geometry kernel — BVH-accelerated mesh queries (intersection, distance,
# containment), PCA for OOBB / principal axes, and (eventually) CSG for
# net-boolean baking. Foundation for the clash engine and the boolean
# behaviour change. Feature-gated because parry3d + nalgebra add ~1 MB
# to the compiled artifact; default Python wheel decision deferred.
geom = ["mesh", "dep:parry3d", "dep:nalgebra"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py310"], optional = true }
memchr = "2.7"
memmap2 = "0.9"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
earcutr = { version = "0.4", optional = true }
glam = { version = "0.29", optional = true }
arrow = { version = "53", optional = true }
parquet = { version = "53", features = ["arrow"], optional = true }
parry3d = { version = "0.17", optional = true }
nalgebra = { version = "0.33", optional = true }
