[package]
name = "ifcfast-core"
version = "0.4.26"
edition = "2021"
license = "MIT"
description = "Fast native IFC parser and data extractors"
repository = "https://github.com/EdvardGK/ifcfast"

[lib]
# Python sees this module at `ifcfast._core` thanks to maturin's
# `module-name` setting in pyproject.toml. The user-facing API in
# python/ifcfast/__init__.py wraps this.
name = "_core"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ifcfast-bench"
path = "src/bin/bench.rs"
required-features = []

[[bin]]
name = "ifcfast-mesh"
path = "src/bin/mesh.rs"
required-features = ["mesh"]

[[bin]]
name = "ifcfast-bundle"
path = "src/bin/bundle.rs"
required-features = ["bundle"]

[[bin]]
name = "ifcfast-clash"
path = "src/bin/clash.rs"
required-features = ["clash"]

[features]
default = ["python", "bundle", "geom", "clash", "csg"]
python = ["dep:pyo3"]
mesh = ["dep:earcutr", "dep:glam", "dep:rayon", "dep:dashmap", "dep:crossbeam-channel"]
# Streaming substrate writer (GeoParquet-of-products). Pulls in arrow
# + parquet. Now in the default Python wheel since the clash engine
# reads the substrate as its input.
bundle = ["mesh", "dep:arrow", "dep:parquet"]
# Geometry kernel — BVH-accelerated mesh queries (intersection,
# distance, containment), PCA for OOBB / principal axes, and
# (eventually) CSG for net-boolean baking. Foundation for the clash
# engine and the boolean behaviour change. Now in the default Python
# wheel — `ifcfast.clash()` needs it.
geom = ["mesh", "dep:parry3d", "dep:nalgebra"]
# Substrate-aware clash engine — reads the bundle's instances /
# representations parquet, runs broad-phase AABB overlap + narrow-phase
# mesh-mesh intersection, writes `clashes.parquet`. Stacks both
# `bundle` (for I/O) and `geom` (for the kernel).
clash = ["bundle", "geom"]
# Net booleans via the Manifold C++ CSG library. Used by the
# cut-openings path that subtracts IfcOpeningElement geometry from
# its host product (wall, slab, …) so viewer exports render holes
# instead of solid bodies. Off by default in the wheel until the
# native build dep is exercised across all wheel platforms.
csg = ["geom", "dep:manifold-csg"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py310"], optional = true }
memchr = "2.7"
memmap2 = "0.9"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
earcutr = { version = "0.4", optional = true }
glam = { version = "0.29", optional = true }
# Parallel per-product tessellation in mesh_ifc_streaming_framed.
# `dashmap` backs the IfcMappedItem shape_cache for concurrent dedup
# across worker threads. Pulled in by the `mesh` feature only — the
# `bench` and `bundle`-less builds stay slim.
rayon = { version = "1.10", optional = true }
dashmap = { version = "6.1", optional = true }
# Lock-free MPSC for the rayon mesh pass's bounded ordered channel
# between parallel tessellation workers and the serial drain. std
# mpsc's mutex+condvar SyncSender is 13–24% slower than the previous
# `Vec<ProductOutcome>` collect under measurement on real files;
# crossbeam's `bounded` is lock-free and scales linearly with workers.
crossbeam-channel = { version = "0.5", optional = true }
arrow = { version = "53", optional = true }
parquet = { version = "53", features = ["arrow"], optional = true }
parry3d = { version = "0.17", optional = true }
nalgebra = { version = "0.33", optional = true }
manifold-csg = { version = "0.2", optional = true, default-features = false, features = ["parallel"] }
